Updated the README, applied setTcpNoDelay