@@ -13,9 +13,26 @@ To create a simple and lightweight cached proxy server based on Java SE with no 
 Feel free to use config file [MaltaProxy_JMeter_performance_test.jmx](MaltaProxy_JMeter_performance_test.jmx) with [test data with the request body samples](MaltaProxyCannedJsonDeviceData10k.csv)
  for performance test measurement in [JMeter](https://jmeter.apache.org/).
   
+Run JMeter test in command line with specifying the log file with results:   
+```
+jmeter -t MaltaProxy_JMeter_performance_test.jmx -n -l jMeterDetailedResults.csv
+```  
+  
+To update settings or run JMeter in GUI run `jmeter` in command line, open the [MaltaProxy_JMeter_performance_test.jmx](MaltaProxy_JMeter_performance_test.jmx), change the options and save it.
+  
 ## How to run
 
-`java -XX:ThreadStackSize=1m -XX:MaxGCPauseMillis=100 -jar /project_root/out/artifacts/MaltaProxy.jar`
+Simple run:
+
+```
+java -jar /project_root/out/artifacts/MaltaProxy.jar SERVER_PORT=8081 THREADS=4 
+```
+
+With ZGC and echo to the log file:
+  
+```
+java -XX:+UseZGC -Xms128m -Xmx1024m -XX:+UseLargePages -XX:ConcGCThreads=2 -jar /project_root/out/artifacts/MaltaProxy.jar SERVER_PORT=8081 THREADS=4 > detailedLog.log 2>&1
+```
   
 ## Class diagram
 
